crates/criticalup-cli/tests/snapshots/cli__auth_set__via_tty_nl__set_invalid_token.snap
---
source: crates/criticalup-cli/tests/cli/auth_set.rs
expression: repr
---
exit: exit status: 1

empty stdout

stderr
------
Visit https://customers-test.ferrocene.dev/users/tokens to create a new token, then enter it below.
enter the authentication token: error: invalid authentication token provided
------
